// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/[locale]/about-zintl/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl from "virtual:zintl/manager/none/entry:b_src_app__locale__about_zintl_page_AboutZintl";

export const generateStaticParams = async () => {
  return ["en", "ar", "es", "zh"].map((locale) => ({ locale }));
};
export default async function AboutZintl({ params }: PageProps<"/[locale]/about-zintl">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__about_zintl_page_AboutZintl"]: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black p-16">
      <h1 className="text-3xl font-semibold text-black dark:text-zinc-50">{_t("About Zintl Translation System", { _mgr: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl, _bId: "b_src_app__locale__about_zintl_page_AboutZintl" })}</h1>
      <p className="mt-4 max-w-md text-lg text-zinc-600 dark:text-zinc-400">{_t("Zintl is a compiler-driven internationalization system for modern web applications.", { _mgr: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl, _bId: "b_src_app__locale__about_zintl_page_AboutZintl" })}</p>
      <div className="mt-8 p-4 bg-zinc-100 dark:bg-zinc-900 rounded border border-zinc-200 dark:border-zinc-800">
        <p className="text-sm font-mono text-zinc-500">{_t("Current Locale: {locale}", { locale: locale }, { _mgr: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl, _bId: "b_src_app__locale__about_zintl_page_AboutZintl" })}</p>
      </div>
    </div>
  );
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/app/[locale]/about-zintl/page");
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/[locale]/layout.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__page_Home from "virtual:zintl/manager/none/entry:b_src_app__locale__page_Home";
import _zintl_mgr_b_src_app__locale__layout_f_625 from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_625";
import _zintl_mgr_b_src_app__locale__layout_RootLayout from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_RootLayout";
import _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl from "virtual:zintl/manager/none/entry:b_src_app__locale__about_zintl_page_AboutZintl";
import type { Metadata } from "next";
import { Geist, Geist_Mono } from "next/font/google";

import LocaleSwitcher from "../../components/locales";

const geistSans = Geist({
  variable: "--font-geist-sans",
  subsets: ["latin"],
});

const geistMono = Geist_Mono({
  variable: "--font-geist-mono",
  subsets: ["latin"],
});

export const generateStaticParams = async () => {
  return ["en", "ar", "es", "zh"].map((locale) => ({ locale }));
};

export const generateMetadata = async ({ params }: LayoutProps<"/[locale]">): Promise<Metadata> => {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__about_zintl_page_AboutZintl"]: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl.loader, ["b_src_app__locale__layout_RootLayout"]: _zintl_mgr_b_src_app__locale__layout_RootLayout.loader, ["b_src_app__locale__layout_f_625"]: _zintl_mgr_b_src_app__locale__layout_f_625.loader, ["b_src_app__locale__page_Home"]: _zintl_mgr_b_src_app__locale__page_Home.loader } }));

  return {
    title: _t("Create Next App {locale}", { locale: locale }, { _mgr: _zintl_mgr_b_src_app__locale__layout_f_625, _bId: "b_src_app__locale__layout_f_625" }),
    description: _t("Generated by create next app", { _mgr: _zintl_mgr_b_src_app__locale__layout_f_625, _bId: "b_src_app__locale__layout_f_625" }),
  };
};

export default async function RootLayout({ children, params }: LayoutProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__about_zintl_page_AboutZintl"]: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl.loader, ["b_src_app__locale__layout_RootLayout"]: _zintl_mgr_b_src_app__locale__layout_RootLayout.loader, ["b_src_app__locale__layout_f_625"]: _zintl_mgr_b_src_app__locale__layout_f_625.loader, ["b_src_app__locale__page_Home"]: _zintl_mgr_b_src_app__locale__page_Home.loader } }));
  return (
    <html
      lang={locale}
      dir={_t("ltr", { _mgr: _zintl_mgr_b_src_app__locale__layout_RootLayout, _bId: "b_src_app__locale__layout_RootLayout" })}
      className={\`\${geistSans.variable} \${geistMono.variable} h-full antialiased\`}
    >
      <body className="min-h-full flex flex-col">
        <LocaleSwitcher locale={locale} />
        {children}
      </body>
    </html>
  );
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/app/[locale]/layout");
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/[locale]/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__page_Home from "virtual:zintl/manager/none/entry:b_src_app__locale__page_Home";
import _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl from "virtual:zintl/manager/none/entry:b_src_app__locale__about_zintl_page_AboutZintl";
import Image from "next/image";
import Link from "next/link";


export default async function Home({ params }: PageProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__about_zintl_page_AboutZintl"]: _zintl_mgr_b_src_app__locale__about_zintl_page_AboutZintl.loader, ["b_src_app__locale__page_Home"]: _zintl_mgr_b_src_app__locale__page_Home.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black">
      <main className="flex flex-1 w-full max-w-3xl flex-col items-center justify-between py-32 px-16 bg-white dark:bg-black sm:items-start">
        <div className="w-full">
          <div className="w-full flex flex-row items-baseline gap-2.5 flex-wrap">
            <Image
              className="dark:invert"
              src="/next.svg"
              alt={_t("Next.js logo", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}
              width={100}
              height={20}
              priority
            />
            {/* @zintl-ignore */}
            <span>x</span>
            <Link href={\`/\${locale}/about-zintl\`} className="font-bold text-2xl">{_t("Zintl(i18n)", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</Link>
          </div>
        </div>
        <div className="flex flex-col items-center gap-6 text-center sm:items-start sm:text-left">
          <h1 className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-black dark:text-zinc-50">{_t("To get started, edit the page.tsx file.", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</h1>
          <p className="max-w-md text-lg leading-8 text-zinc-600 dark:text-zinc-400">{<span style={{ display: "contents" }} dangerouslySetInnerHTML={{ __html: _t("Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home", _tags: [{ alias: "a1", originalOpen: \`<a
              href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }, { alias: "a2", originalOpen: \`<a
              href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }] }) }} />}</p>
        </div>
        <div className="flex flex-col gap-4 text-base font-medium sm:flex-row">
          <a
            className="flex h-12 w-full items-center justify-center gap-2 rounded-full bg-foreground px-5 text-background transition-colors hover:bg-[#383838] dark:hover:bg-[#ccc] md:w-[158px]"
            href="https://vercel.com/new?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{<span style={{ display: "contents" }} dangerouslySetInnerHTML={{ __html: _t("<image/> Deploy Now", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home", _tags: [{ alias: "image", originalOpen: \`<Image
              class="dark:invert"
              src="/vercel.svg"
              alt="Vercel logomark"
              width="\${16}"
              height="\${16}"
            />\`, tagName: "image" }] }) }} />}</a>
          <a
            className="flex h-12 w-full items-center justify-center rounded-full border border-solid border-black/[.08] px-5 transition-colors hover:border-transparent hover:bg-black/[.04] dark:border-white/[.145] dark:hover:bg-[#1a1a1a] md:w-[158px]"
            href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{_t("Documentationn", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</a>
        </div>
      </main>
    </div>
  );
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/app/[locale]/page");
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/components/locales.tsx 1`] = `
"import { _t, getLocale } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__layout_RootLayout from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_RootLayout";

import Link from "next/link";
import Image from "next/image";
const locales = [
  { id: "en", name: "English" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
  { id: "ar", name: "العربية" },
];

export default function LocaleSwitcher() {
  const locale = getLocale() || "en";

  return (
    <section className="flex items-center justify-end h-14 max-h-full border-b border-foreground/20 ">
      <div className="flex flex-row gap-4 flex-wrap justify-end ">
        {locales.map((l) => (
          <Link
            key={l.id}
            href={\`/\${l.id}\`}
            className={locale === l.id ? "opacity-60 cursor-default" : "underline"}
          >
            {l.name}
          </Link>
        ))}
      </div>
      <div className="flex items-center justify-center h-full w-14 border-foreground/20  border-s-2 ms-5">
        <Image
          className="w-5 h-5 text-foreground shrink-0 opacity-60 dark:invert"
          src="/languages.svg"
          alt={_t("languages", { _mgr: _zintl_mgr_b_src_app__locale__layout_RootLayout, _bId: "b_src_app_components_locales_default" })}
          width={16}
          height={16}
        />
      </div>
    </section>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/layout.tsx 1`] = `
"import "./globals.css";

export default async function RootLayout({ children }: { children: React.ReactNode }) {
  return <>{children}</>;
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/components/locales.tsx 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__layout_RootLayout from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_RootLayout";
"use client";

import Link from "next/link";
import Image from "next/image";
import { useSelectedLayoutSegments } from "next/navigation";

const locales = [
  { id: "en", name: "English" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
  { id: "ar", name: "العربية" },
];

export default function LocaleSwitcher({ locale }: { locale: string }) {
  const segments = useSelectedLayoutSegments();

  const switchLocaleHref = (l: string) => {
    return \`/\${l}/\${segments.join("/")}\`;
  };

  return (
    <section className="flex flex-wrap items-center gap-3 max-h-full justify-center max-w-fit ">
      <div className="flex items-center justify-center h-full w-14 border-e ">
        <Image
          className="w-4 h-4 text-foreground shrink-0 opacity-60 dark:invert "
          src="/languages.svg"
          alt={_t("languages", { _mgr: _zintl_mgr_b_src_app__locale__layout_RootLayout, _bId: "b_src_components_locales_default" })}
          width={12}
          height={12}
        />
      </div>
      {locales.map((l) => (
        <Link
          key={l.id}
          href={switchLocaleHref(l.id)}
          prefetch={false}
          className={locale === l.id ? "opacity-60 cursor-default" : "underline"}
        >
          {l.name}
        </Link>
      ))}
    </section>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/proxy.ts 1`] = `
"import { NextResponse } from "next/server";
import type { NextRequest } from "next/server";

const SUPPORTED_LOCALES = ["ar", "es", "zh"];
const DEFAULT_LOCALE = "en";
const ALL_LOCALES = [DEFAULT_LOCALE, ...SUPPORTED_LOCALES];

export function proxy(request: NextRequest) {
  const { pathname } = request.nextUrl;

  // 1. Check if the path already starts with a supported locale prefix (e.g. /en, /ar/about-zintl)
  const segments = pathname.split("/");
  const firstSegment = segments[1];

  if (ALL_LOCALES.includes(firstSegment)) {
    // Already has a valid locale prefix. Let the request proceed as-is.
    return;
  }

  // 2. The path does not have a locale prefix. We need to handle localization.
  const acceptLanguage = request.headers.get("accept-language") || "";
  const preferredLocale = SUPPORTED_LOCALES.find((locale) =>
    acceptLanguage.toLowerCase().includes(locale),
  );

  // If a preferred locale (ar, es, zh) is detected in request headers, do a real redirect
  if (preferredLocale) {
    const targetPath = pathname === "/" ? \`/\${preferredLocale}\` : \`/\${preferredLocale}\${pathname}\`;
    return NextResponse.redirect(new URL(targetPath, request.url));
  }

  // Default fallback: rewrite to DEFAULT_LOCALE (en) under the hood (browser URL does not change)
  const targetPath = pathname === "/" ? \`/\${DEFAULT_LOCALE}\` : \`/\${DEFAULT_LOCALE}\${pathname}\`;
  return NextResponse.rewrite(new URL(targetPath, request.url));
}

export const config = {
  matcher: [
    // Match all paths except:
    // - api routes
    // - next internal/static assets (e.g. _next/static, _next/image)
    // - files with extensions (e.g. favicon.ico, images, stylesheets)
    "/((?!api|_next/static|_next/image|favicon.ico|.*\\\\..*).*)",
  ],
};"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__about_zintl_page_AboutZintl 1`] = `
"const catalog = {
    "b_src_app__locale__about_zintl_page_AboutZintl": {
      "About Zintl Translation System": "حول نظام ترجمة Zintl",
      "Zintl is a compiler-driven internationalization system for modern web applications.": "Zintl هو نظام دولنة مدفوع بالمترجم لتطبيقات الويب الحديثة.",
      "Current Locale: {locale}": (params) => {
    const { locale } = params;
    return \`اللغة الحالية: \${params['locale']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__layout_RootLayout 1`] = `
"const catalog = {
    "b_src_app__locale__layout_RootLayout": {
      "ltr": "rtl",
    },
    "b_src_components_locales_default": {
      "languages": "اللغات",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "Generated by create next app": "تم إنشاؤه بواسطة create next app",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_528 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_528": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "Generated by create next app": "تم إنشاؤه بواسطة create next app",
    },
    "b_src_app_components_locales_default": {
      "languages": "اللغات",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_625 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_625": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "Generated by create next app": "تم إنشاؤه بواسطة create next app",
    },
    "b_src_components_locales_default": {
      "languages": "اللغات",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      "Next.js logo": "شعار Next.js",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "للبدء، قم بتحرير ملف page.tsx.",
      "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.": "هل تبحث عن نقطة بداية أو المزيد من التعليمات؟ توجه إلى <a1> القوالب </a1> أو مركز <a2> التعلم </a2>.",
      "<image/> Deploy Now": "<image/> انشر الآن",
      "Vercel logomark": "شعار Vercel",
      "Documentationn": "التوثيق",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__about_zintl_page_AboutZintl 1`] = `
"const catalog = {
    "b_src_app__locale__about_zintl_page_AboutZintl": {
      "About Zintl Translation System": "Sobre el Sistema de Traducción Zintl",
      "Zintl is a compiler-driven internationalization system for modern web applications.": "Zintl es un sistema de internacionalización impulsado por compilador para aplicaciones web modernas.",
      "Current Locale: {locale}": (params) => {
    const { locale } = params;
    return \`Localización actual: \${params['locale']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__layout_RootLayout 1`] = `
"const catalog = {
    "b_src_app__locale__layout_RootLayout": {
      "ltr": "ltr",
    },
    "b_src_components_locales_default": {
      "languages": "idiomas",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "Generated by create next app": "Generado por create next app",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__layout_f_528 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_528": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "Generated by create next app": "Generado por create next app",
    },
    "b_src_app_components_locales_default": {
      "languages": "idiomas",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__layout_f_625 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_625": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "Generated by create next app": "Generado por create next app",
    },
    "b_src_components_locales_default": {
      "languages": "idiomas",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      "Next.js logo": "Logo de Next.js",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "Para comenzar, edite el archivo page.tsx.",
      "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.": "¿Buscas un punto de partida o más instrucciones? Dirígete a <a1> Plantillas </a1> o al centro de <a2> Aprendizaje </a2>.",
      "<image/> Deploy Now": "<image/> Desplegar ahora",
      "Vercel logomark": "Logomarca de Vercel",
      "Documentationn": "Documentación",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__about_zintl_page_AboutZintl 1`] = `
"const catalog = {
    "b_src_app__locale__about_zintl_page_AboutZintl": {
      "About Zintl Translation System": "关于 Zintl 翻译系统",
      "Zintl is a compiler-driven internationalization system for modern web applications.": "Zintl 是一个面向现代 Web 应用程序的编译器驱动的国际化系统。",
      "Current Locale: {locale}": (params) => {
    const { locale } = params;
    return \`当前语言环境: \${params['locale']}\`;
  },
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__layout_RootLayout 1`] = `
"const catalog = {
    "b_src_app__locale__layout_RootLayout": {
      "ltr": "ltr",
    },
    "b_src_components_locales_default": {
      "languages": "语言",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "Generated by create next app": "由 create next app 生成",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_528 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_528": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "Generated by create next app": "由 create next app 生成",
    },
    "b_src_app_components_locales_default": {
      "languages": "语言",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_625 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_625": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "Generated by create next app": "由 create next app 生成",
    },
    "b_src_components_locales_default": {
      "languages": "语言",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      "Next.js logo": "Next.js 标志",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "要开始使用，请编辑 page.tsx 文件。",
      "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.": "寻找起点或更多说明？前往 <a1> 模板 </a1> 或 <a2> 学习 </a2> 中心。",
      "<image/> Deploy Now": "<image/> 立即部署",
      "Vercel logomark": "Vercel 品牌标识",
      "Documentationn": "文档",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__about_zintl_page_AboutZintl 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__about_zintl_page_AboutZintl", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__about_zintl_page_AboutZintl": {
      "About Zintl Translation System": "About Zintl Translation System",
      "Zintl is a compiler-driven internationalization system for modern web applications.": "Zintl is a compiler-driven internationalization system for modern web applications.",
      "Current Locale: {locale}": (params) => {
    const { locale } = params;
    return \`Current Locale: \${params['locale']}\`;
  },
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__about_zintl_page_AboutZintl").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__about_zintl_page_AboutZintl").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__about_zintl_page_AboutZintl").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__layout_RootLayout 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__layout_RootLayout", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__layout_RootLayout": {
      "ltr": "ltr",
    },
    "b_src_components_locales_default": {
      "languages": "languages",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__layout_RootLayout").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__layout_RootLayout").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__layout_RootLayout").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_476 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__layout_f_476", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "Generated by create next app": "Generated by create next app",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_528 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__layout_f_528", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__layout_f_528": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "Generated by create next app": "Generated by create next app",
    },
    "b_src_app_components_locales_default": {
      "languages": "languages",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_528").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__layout_f_528").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_528").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_625 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__layout_f_625", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__layout_f_625": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "Generated by create next app": "Generated by create next app",
    },
    "b_src_components_locales_default": {
      "languages": "languages",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_625").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__layout_f_625").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_625").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__page_Home 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__page_Home", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__page_Home": {
      "Next.js logo": "Next.js logo",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "To get started, edit the page.tsx file.",
      "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.": "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.",
      "<image/> Deploy Now": "<image/> Deploy Now",
      "Vercel logomark": "Vercel logomark",
      "Documentationn": "Documentationn",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__page_Home").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__page_Home").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__page_Home").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			pathname = pathname.split("?")[0].split("#")[0];
			if (pathname.includes("://")) try {
				pathname = new URL(pathname).pathname;
			} catch {
				pathname = pathname.replace(/^https?:\\/\\/[^/]+/, "");
			}
			else {
				pathname = pathname.replace(/^[^/]+:\\d+/, "");
				pathname = pathname.replace(/^[^/]+\\.[^/]+/, "");
			}
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	let message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) if (mgr) {
		instance.registerLoader(mgr.id, mgr.loader);
		const boundaryCatalogAfter = targetBId ? instance.catalogs[locale]?.[targetBId] : void 0;
		message = boundaryCatalogAfter ? boundaryCatalogAfter[key] : void 0;
		if (message === void 0) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
	} else {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/[locale]/about-zintl/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_3980facabe09 from "virtual:zintl/manager/none/entry:b_3980facabe09";

export const generateStaticParams = async () => {
  return ["en", "ar", "es", "zh"].map((locale) => ({ locale }));
};
export default async function AboutZintl({ params }: PageProps<"/[locale]/about-zintl">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_3980facabe09"]: _zintl_mgr_b_3980facabe09.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black p-16">
      <h1 className="text-3xl font-semibold text-black dark:text-zinc-50">{_t("c7168961", { _mgr: _zintl_mgr_b_3980facabe09, _bId: "b_3980facabe09" })}</h1>
      <p className="mt-4 max-w-md text-lg text-zinc-600 dark:text-zinc-400">{_t("a64cb175", { _mgr: _zintl_mgr_b_3980facabe09, _bId: "b_3980facabe09" })}</p>
      <div className="mt-8 p-4 bg-zinc-100 dark:bg-zinc-900 rounded border border-zinc-200 dark:border-zinc-800">
        <p className="text-sm font-mono text-zinc-500">{_t("a737c418", { locale: locale }, { _mgr: _zintl_mgr_b_3980facabe09, _bId: "b_3980facabe09" })}</p>
      </div>
    </div>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/[locale]/layout.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_a744357e6e46 from "virtual:zintl/manager/none/entry:b_a744357e6e46";
import _zintl_mgr_b_d4553e81db29 from "virtual:zintl/manager/none/entry:b_d4553e81db29";
import _zintl_mgr_b_d50387e8cba4 from "virtual:zintl/manager/none/entry:b_d50387e8cba4";
import _zintl_mgr_b_3980facabe09 from "virtual:zintl/manager/none/entry:b_3980facabe09";
import type { Metadata } from "next";
import { Geist, Geist_Mono } from "next/font/google";

import LocaleSwitcher from "../../components/locales";

const geistSans = Geist({
  variable: "--font-geist-sans",
  subsets: ["latin"],
});

const geistMono = Geist_Mono({
  variable: "--font-geist-mono",
  subsets: ["latin"],
});

export const generateStaticParams = async () => {
  return ["en", "ar", "es", "zh"].map((locale) => ({ locale }));
};

export const generateMetadata = async ({ params }: LayoutProps<"/[locale]">): Promise<Metadata> => {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_3980facabe09"]: _zintl_mgr_b_3980facabe09.loader, ["b_d50387e8cba4"]: _zintl_mgr_b_d50387e8cba4.loader, ["b_d4553e81db29"]: _zintl_mgr_b_d4553e81db29.loader, ["b_a744357e6e46"]: _zintl_mgr_b_a744357e6e46.loader } }));

  return {
    title: _t("f26ebb92", { locale: locale }, { _mgr: _zintl_mgr_b_d4553e81db29, _bId: "b_d4553e81db29" }),
    description: _t("a2995064", { _mgr: _zintl_mgr_b_d4553e81db29, _bId: "b_d4553e81db29" }),
  };
};

export default async function RootLayout({ children, params }: LayoutProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_3980facabe09"]: _zintl_mgr_b_3980facabe09.loader, ["b_d50387e8cba4"]: _zintl_mgr_b_d50387e8cba4.loader, ["b_d4553e81db29"]: _zintl_mgr_b_d4553e81db29.loader, ["b_a744357e6e46"]: _zintl_mgr_b_a744357e6e46.loader } }));
  return (
    <html
      lang={locale}
      dir={_t("61ac44aa", { _mgr: _zintl_mgr_b_d50387e8cba4, _bId: "b_d50387e8cba4" })}
      className={\`\${geistSans.variable} \${geistMono.variable} h-full antialiased\`}
    >
      <body className="min-h-full flex flex-col">
        <LocaleSwitcher locale={locale} />
        {children}
      </body>
    </html>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/[locale]/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_a744357e6e46 from "virtual:zintl/manager/none/entry:b_a744357e6e46";
import _zintl_mgr_b_3980facabe09 from "virtual:zintl/manager/none/entry:b_3980facabe09";
import Image from "next/image";
import Link from "next/link";


export default async function Home({ params }: PageProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_3980facabe09"]: _zintl_mgr_b_3980facabe09.loader, ["b_a744357e6e46"]: _zintl_mgr_b_a744357e6e46.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black">
      <main className="flex flex-1 w-full max-w-3xl flex-col items-center justify-between py-32 px-16 bg-white dark:bg-black sm:items-start">
        <div className="w-full">
          <div className="w-full flex flex-row items-baseline gap-2.5 flex-wrap">
            <Image
              className="dark:invert"
              src="/next.svg"
              alt={_t("6680ed51", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}
              width={100}
              height={20}
              priority
            />
            {/* @zintl-ignore */}
            <span>x</span>
            <Link href={\`/\${locale}/about-zintl\`} className="font-bold text-2xl">{_t("f18b8fe7", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</Link>
          </div>
        </div>
        <div className="flex flex-col items-center gap-6 text-center sm:items-start sm:text-left">
          <h1 className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-black dark:text-zinc-50">{_t("6a0fa24d", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</h1>
          <p className="max-w-md text-lg leading-8 text-zinc-600 dark:text-zinc-400">{<span style={{ display: "contents" }} dangerouslySetInnerHTML={{ __html: _t("7fa24745", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46", _tags: [{ alias: "a1", originalOpen: \`<a
              href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }, { alias: "a2", originalOpen: \`<a
              href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }] }) }} />}</p>
        </div>
        <div className="flex flex-col gap-4 text-base font-medium sm:flex-row">
          <a
            className="flex h-12 w-full items-center justify-center gap-2 rounded-full bg-foreground px-5 text-background transition-colors hover:bg-[#383838] dark:hover:bg-[#ccc] md:w-[158px]"
            href="https://vercel.com/new?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{<span style={{ display: "contents" }} dangerouslySetInnerHTML={{ __html: _t("b75c70e0", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46", _tags: [{ alias: "image", originalOpen: \`<Image
              class="dark:invert"
              src="/vercel.svg"
              alt="Vercel logomark"
              width="\${16}"
              height="\${16}"
            />\`, tagName: "image" }] }) }} />}</a>
          <a
            className="flex h-12 w-full items-center justify-center rounded-full border border-solid border-black/[.08] px-5 transition-colors hover:border-transparent hover:bg-black/[.04] dark:border-white/[.145] dark:hover:bg-[#1a1a1a] md:w-[158px]"
            href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{_t("215fd18f", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</a>
        </div>
      </main>
    </div>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/components/locales.tsx 1`] = `
"import { _t, getLocale } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_d50387e8cba4 from "virtual:zintl/manager/none/entry:b_d50387e8cba4";

import Link from "next/link";
import Image from "next/image";
const locales = [
  { id: "en", name: "English" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
  { id: "ar", name: "العربية" },
];

export default function LocaleSwitcher() {
  const locale = getLocale() || "en";

  return (
    <section className="flex items-center justify-end h-14 max-h-full border-b border-foreground/20 ">
      <div className="flex flex-row gap-4 flex-wrap justify-end ">
        {locales.map((l) => (
          <Link
            key={l.id}
            href={\`/\${l.id}\`}
            className={locale === l.id ? "opacity-60 cursor-default" : "underline"}
          >
            {l.name}
          </Link>
        ))}
      </div>
      <div className="flex items-center justify-center h-full w-14 border-foreground/20  border-s-2 ms-5">
        <Image
          className="w-5 h-5 text-foreground shrink-0 opacity-60 dark:invert"
          src="/languages.svg"
          alt={_t("0265a28b", { _mgr: _zintl_mgr_b_d50387e8cba4, _bId: "b_09c703c1d2d3" })}
          width={16}
          height={16}
        />
      </div>
    </section>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/layout.tsx 1`] = `
"import "./globals.css";

export default async function RootLayout({ children }: { children: React.ReactNode }) {
  return <>{children}</>;
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/components/locales.tsx 1`] = `
"import { _t } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_d50387e8cba4 from "virtual:zintl/manager/none/entry:b_d50387e8cba4";
"use client";

import Link from "next/link";
import Image from "next/image";
import { useSelectedLayoutSegments } from "next/navigation";

const locales = [
  { id: "en", name: "English" },
  { id: "es", name: "Español" },
  { id: "zh", name: "中文" },
  { id: "ar", name: "العربية" },
];

export default function LocaleSwitcher({ locale }: { locale: string }) {
  const segments = useSelectedLayoutSegments();

  const switchLocaleHref = (l: string) => {
    return \`/\${l}/\${segments.join("/")}\`;
  };

  return (
    <section className="flex flex-wrap items-center gap-3 max-h-full justify-center max-w-fit ">
      <div className="flex items-center justify-center h-full w-14 border-e ">
        <Image
          className="w-4 h-4 text-foreground shrink-0 opacity-60 dark:invert "
          src="/languages.svg"
          alt={_t("0265a28b", { _mgr: _zintl_mgr_b_d50387e8cba4, _bId: "b_c8bb4bbab82d" })}
          width={12}
          height={12}
        />
      </div>
      {locales.map((l) => (
        <Link
          key={l.id}
          href={switchLocaleHref(l.id)}
          prefetch={false}
          className={locale === l.id ? "opacity-60 cursor-default" : "underline"}
        >
          {l.name}
        </Link>
      ))}
    </section>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/proxy.ts 1`] = `
"import { NextResponse } from "next/server";
import type { NextRequest } from "next/server";

const SUPPORTED_LOCALES = ["ar", "es", "zh"];
const DEFAULT_LOCALE = "en";
const ALL_LOCALES = [DEFAULT_LOCALE, ...SUPPORTED_LOCALES];

export function proxy(request: NextRequest) {
  const { pathname } = request.nextUrl;

  // 1. Check if the path already starts with a supported locale prefix (e.g. /en, /ar/about-zintl)
  const segments = pathname.split("/");
  const firstSegment = segments[1];

  if (ALL_LOCALES.includes(firstSegment)) {
    // Already has a valid locale prefix. Let the request proceed as-is.
    return;
  }

  // 2. The path does not have a locale prefix. We need to handle localization.
  const acceptLanguage = request.headers.get("accept-language") || "";
  const preferredLocale = SUPPORTED_LOCALES.find((locale) =>
    acceptLanguage.toLowerCase().includes(locale),
  );

  // If a preferred locale (ar, es, zh) is detected in request headers, do a real redirect
  if (preferredLocale) {
    const targetPath = pathname === "/" ? \`/\${preferredLocale}\` : \`/\${preferredLocale}\${pathname}\`;
    return NextResponse.redirect(new URL(targetPath, request.url));
  }

  // Default fallback: rewrite to DEFAULT_LOCALE (en) under the hood (browser URL does not change)
  const targetPath = pathname === "/" ? \`/\${DEFAULT_LOCALE}\` : \`/\${DEFAULT_LOCALE}\${pathname}\`;
  return NextResponse.rewrite(new URL(targetPath, request.url));
}

export const config = {
  matcher: [
    // Match all paths except:
    // - api routes
    // - next internal/static assets (e.g. _next/static, _next/image)
    // - files with extensions (e.g. favicon.ico, images, stylesheets)
    "/((?!api|_next/static|_next/image|favicon.ico|.*\\\\..*).*)",
  ],
};"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_0964b259833d 1`] = `
"const catalog = {
    "b_0964b259833d": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "a2995064": "تم إنشاؤه بواسطة create next app",
    },
    "b_09c703c1d2d3": {
      "0265a28b": "اللغات",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_3980facabe09 1`] = `
"const catalog = {
    "b_3980facabe09": {
      "c7168961": "حول نظام ترجمة Zintl",
      "a64cb175": "Zintl هو نظام دولنة مدفوع بالمترجم لتطبيقات الويب الحديثة.",
      "a737c418": (params) => {
    const { locale } = params;
    return \`اللغة الحالية: \${params['locale']}\`;
  },
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "6680ed51": "شعار Next.js",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "للبدء، قم بتحرير ملف page.tsx.",
      "7fa24745": "هل تبحث عن نقطة بداية أو المزيد من التعليمات؟ توجه إلى <a1> القوالب </a1> أو مركز <a2> التعلم </a2>.",
      "b75c70e0": "<image/> انشر الآن",
      "3b888a01": "شعار Vercel",
      "215fd18f": "التوثيق",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_d4553e81db29 1`] = `
"const catalog = {
    "b_d4553e81db29": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "a2995064": "تم إنشاؤه بواسطة create next app",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "اللغات",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_d50387e8cba4 1`] = `
"const catalog = {
    "b_d50387e8cba4": {
      "61ac44aa": "rtl",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "اللغات",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "a2995064": "تم إنشاؤه بواسطة create next app",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_0964b259833d 1`] = `
"const catalog = {
    "b_0964b259833d": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "a2995064": "Generado por create next app",
    },
    "b_09c703c1d2d3": {
      "0265a28b": "idiomas",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_3980facabe09 1`] = `
"const catalog = {
    "b_3980facabe09": {
      "c7168961": "Sobre el Sistema de Traducción Zintl",
      "a64cb175": "Zintl es un sistema de internacionalización impulsado por compilador para aplicaciones web modernas.",
      "a737c418": (params) => {
    const { locale } = params;
    return \`Localización actual: \${params['locale']}\`;
  },
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "6680ed51": "Logo de Next.js",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "Para comenzar, edite el archivo page.tsx.",
      "7fa24745": "¿Buscas un punto de partida o más instrucciones? Dirígete a <a1> Plantillas </a1> o al centro de <a2> Aprendizaje </a2>.",
      "b75c70e0": "<image/> Desplegar ahora",
      "3b888a01": "Logomarca de Vercel",
      "215fd18f": "Documentación",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_d4553e81db29 1`] = `
"const catalog = {
    "b_d4553e81db29": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "a2995064": "Generado por create next app",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "idiomas",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_d50387e8cba4 1`] = `
"const catalog = {
    "b_d50387e8cba4": {
      "61ac44aa": "ltr",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "idiomas",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "a2995064": "Generado por create next app",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_0964b259833d 1`] = `
"const catalog = {
    "b_0964b259833d": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "a2995064": "由 create next app 生成",
    },
    "b_09c703c1d2d3": {
      "0265a28b": "语言",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_3980facabe09 1`] = `
"const catalog = {
    "b_3980facabe09": {
      "c7168961": "关于 Zintl 翻译系统",
      "a64cb175": "Zintl 是一个面向现代 Web 应用程序的编译器驱动的国际化系统。",
      "a737c418": (params) => {
    const { locale } = params;
    return \`当前语言环境: \${params['locale']}\`;
  },
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "6680ed51": "Next.js 标志",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "要开始使用，请编辑 page.tsx 文件。",
      "7fa24745": "寻找起点或更多说明？前往 <a1> 模板 </a1> 或 <a2> 学习 </a2> 中心。",
      "b75c70e0": "<image/> 立即部署",
      "3b888a01": "Vercel 品牌标识",
      "215fd18f": "文档",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_d4553e81db29 1`] = `
"const catalog = {
    "b_d4553e81db29": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "a2995064": "由 create next app 生成",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "语言",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_d50387e8cba4 1`] = `
"const catalog = {
    "b_d50387e8cba4": {
      "61ac44aa": "ltr",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "语言",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "a2995064": "由 create next app 生成",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_0964b259833d 1`] = `
"export default { id: "b_0964b259833d", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_0964b259833d": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "a2995064": "Generated by create next app",
    },
    "b_09c703c1d2d3": {
      "0265a28b": "languages",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_0964b259833d").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_0964b259833d").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_0964b259833d").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_3980facabe09 1`] = `
"export default { id: "b_3980facabe09", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_3980facabe09": {
      "c7168961": "About Zintl Translation System",
      "a64cb175": "Zintl is a compiler-driven internationalization system for modern web applications.",
      "a737c418": (params) => {
    const { locale } = params;
    return \`Current Locale: \${params['locale']}\`;
  },
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_3980facabe09").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_3980facabe09").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_3980facabe09").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_a744357e6e46 1`] = `
"export default { id: "b_a744357e6e46", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_a744357e6e46": {
      "6680ed51": "Next.js logo",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "To get started, edit the page.tsx file.",
      "7fa24745": "Looking for a starting point or more instructions? Head over to <a1> Templates </a1> or the <a2> Learning </a2> center.",
      "b75c70e0": "<image/> Deploy Now",
      "3b888a01": "Vercel logomark",
      "215fd18f": "Documentationn",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_a744357e6e46").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_a744357e6e46").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_a744357e6e46").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_d4553e81db29 1`] = `
"export default { id: "b_d4553e81db29", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_d4553e81db29": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "a2995064": "Generated by create next app",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "languages",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_d4553e81db29").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_d4553e81db29").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_d4553e81db29").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_d50387e8cba4 1`] = `
"export default { id: "b_d50387e8cba4", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_d50387e8cba4": {
      "61ac44aa": "ltr",
    },
    "b_c8bb4bbab82d": {
      "0265a28b": "languages",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_d50387e8cba4").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_d50387e8cba4").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_d50387e8cba4").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_daacf15fefd1 1`] = `
"export default { id: "b_daacf15fefd1", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "a2995064": "Generated by create next app",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_daacf15fefd1").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_daacf15fefd1").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_daacf15fefd1").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			pathname = pathname.split("?")[0].split("#")[0];
			if (pathname.includes("://")) try {
				pathname = new URL(pathname).pathname;
			} catch {
				pathname = pathname.replace(/^https?:\\/\\/[^/]+/, "");
			}
			else {
				pathname = pathname.replace(/^[^/]+:\\d+/, "");
				pathname = pathname.replace(/^[^/]+\\.[^/]+/, "");
			}
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	let message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) if (mgr) {
		instance.registerLoader(mgr.id, mgr.loader);
		const boundaryCatalogAfter = targetBId ? instance.catalogs[locale]?.[targetBId] : void 0;
		message = boundaryCatalogAfter ? boundaryCatalogAfter[key] : void 0;
		if (message === void 0) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
	} else {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;
